fix: event-service